syntax = "proto3";

package cattle;

service CattleMonitoring {
    rpc cattleData(cattleRequest) returns (cattleResponse) {}
    rpc shedData(stream shedRequest) returns (shedResponse){}
}

message shedRequest {
    int32 temperature = 1;
    int32 humidity = 2;
    int32 waterQuality = 3; 
    int32 waterQuantity = 4;
    int32 ammonia = 5;
}

message shedResponse {
    string alertMessage = 1;
    int32 avgTemperature = 2;
    int32 avgHumidity = 3;
    int32 avgWaterQuality = 4;
    int32 avgWaterQuantity = 5;
    int32 avgAmmoniaLv = 6;
}

message cattleRequest {
    sint32 tagId = 1;
}

message cattleResponse {
    sint32 tagId = 1;
    int32 age = 2;
    int32 weight = 3;
    string healthStatus = 4;
    string heatDetection = 5;
}

service GrazingMonitoring {
    rpc grazingLocation(stream location) returns (stream location) {}
}

message location {
    string name = 1;
    string message = 2;
    int32 location = 3;
}

service NewsAlerts {
    rpc getNewsAlerts(NewsRequest) returns (stream NewsResponse) {}
    rpc getHistoricData(HistoricDataRequest) returns (stream HistoricDataResponse) {}
}

message NewsRequest{
}

message NewsResponse{
    string category = 1;
    string url = 2;
}

message HistoricDataRequest{
}

message HistoricDataResponse{
    sint32 month = 1;
    sint32 annualTemp = 2;
    sint32 annualHum = 3;
    sint32 wQuality = 4;
    sint32 wQuantity = 5;
    sint32 annualAmm = 6;
    sint32 daysGrazing = 7;
}